# Mandelbrot-Set-Parallel

./: CSC4005 Assignment2-Report.md  LICENSE  README
csc4005-imgui/: CMakeLists.txt
csc4005-imgui/src/: main.cpp  main_d.cpp  main_p.cpp  main_p_dynamic.cpp
